<resources>
    <string name="app_name">Hello Volleyball</string>
    <string name="tv_header_title">iVolley</string>
    <string name="login">Login</string>
    <string name="activityMain_login">Login</string>
    <string name="activityMain_About">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sodales eros turpis, et rhoncus enim tempor quis. Duis vulputate fermentum mi, convallis condimentum tortor commodo porta. Morbi tincidunt ipsum tincidunt est maximus blandit. Quisque ornare sapien dolor, at elementum quam feugiat sit amet. Ut laoreet condimentum eros sit amet consequat. Fusce quis tortor pretium, sodales tellus et, mollis nunc. Duis ut mollis sem. Vestibulum a maximus nunc. Etiam volutpat non purus sed molestie. Cras imperdiet, enim a iaculis malesuada, orci purus convallis felis, vel cursus tortor ipsum a quam.
        Proin quis nibh ac risus auctor fringilla. Vestibulum lobortis magna sagittis sapien elementum eleifend nec nec augue. Quisque metus lorem, tincidunt id dictum id, sagittis quis velit. Ut sit amet massa eget diam ultricies auctor eget et nisi. Mauris faucibus nisi et orci accumsan porta. Donec gravida nec nisl a faucibus. Phasellus sit amet varius sapien. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed ut consequat ligula. Fusce sollicitudin, ipsum quis varius mollis, felis nisl semper orci, non feugiat augue dui a nisl.
        Curabitur felis orci, tristique non elit non, aliquet dapibus tellus. Duis blandit convallis suscipit. Aenean laoreet nisi sed ornare porttitor. Morbi congue, nisi at porta porta, mi tellus mattis purus, eget viverra diam eros a leo. Maecenas in sem ut nisi volutpat maximus nec non nunc. Mauris venenatis urna sem, sit amet volutpat velit gravida quis. Sed vel mauris et dui aliquet pretium. Quisque suscipit vestibulum arcu, id facilisis tortor porta at. Curabitur vitae eros tincidunt, volutpat risus eget, sollicitudin massa. Suspendisse aliquam erat mauris, eu auctor libero finibus sit amet. Ut ultricies lacus ut lectus tincidunt consequat. Vivamus non diam mi. Maecenas consectetur tristique dolor, gravida finibus ante pellentesque sed. Phasellus vitae justo diam. Fusce venenatis non velit eget blandit. Proin consequat feugiat est.
        Vivamus risus lorem, suscipit et posuere eget, accumsan sodales ipsum. Sed mollis nisl tellus, a gravida sem rhoncus eu. Nunc molestie elementum sem. Donec sollicitudin, velit quis hendrerit euismod, ipsum nisi laoreet ex, eget vehicula orci lacus non leo. Duis blandit ex in molestie tristique. Vivamus vel luctus mi. Etiam vehicula quam tortor, ut dictum purus porta at. Suspendisse sed sem elementum, faucibus eros et, porttitor erat. Mauris sed tellus id est luctus commodo id non metus. Fusce odio mi, imperdiet eget tempus vel, rutrum eget elit. Nullam magna diam, consequat quis eleifend ut, ultrices at mi.
        Nullam pulvinar sapien mauris, ut fermentum metus volutpat in. Donec non metus pellentesque, efficitur arcu sagittis, consequat neque. Phasellus massa ipsum, sodales laoreet vehicula sit amet, euismod vitae sapien. Vestibulum cursus, sapien eget auctor fermentum, augue magna euismod augue, sit amet pretium risus orci vestibulum ex. Nulla vitae quam sit amet ante ultrices posuere ut id metus. Etiam vitae velit ultrices metus aliquam finibus eget quis erat. Duis faucibus mauris ut hendrerit ullamcorper. Nullam egestas at lacus id vulputate. Aenean lobortis vel odio sed congue.
    </string>
    <string name="about_title">About</string>
    <string name="about_info_1">
        iVolley is an app that will give you general tips, advices and information about the world of volleyball.
        \n\n
        It has two main sections. The first one talks about the rules of Volleyball, along with the frequent asked questions.
        \n\nThe second one shows the top ranking teams on the VNL (Volleyball Nation League).
    </string>
    <string name="about_info_2">
        The FIVB Volleyball Men\'s Nations League is an annual international volleyball competition contested by
        the senior men\'s national teams of the members of the International Volleyball Federation
    </string>
    <string name="about_go_back">Go back</string>
    <string name="login_mainTitle">Login</string>
    <string name="login_btn_login">Log in</string>
    <string name="login_failed_msg">Login failed. Wrong username or password.</string>
    <string name="menu_settings">Settings</string>
    <string name="rules">Rules</string>
    <string name="faq">FAQ</string>
    <string name="ranking">Ranking</string>
    <string name="dashboard_toolbar_name">Dashboard</string>

    <!-- Volleyball Rules -->
    <string name="rules_volleyball_1">Only 6 players on the floor at any given time: 3 in the front row and 3 in the back row.\n\nPoints are made on every serve for the winning team of the rally (rally-point scoring).\n\nPlayers may not hit the ball twice in succession (a block is not considered a hit).\n\nBall may be played off the net during a volley and on a serve.\n\nA ball hitting a boundary line is in.\n\nA ball is out if it hits an antennae, the floor completely outside the court, any of the net or cables outside the antennae, the referee stand or pole, or the ceiling above a non-playable area.\n\nIt is legal to contact the ball with any part of a player’s body.\n\nIt is illegal to catch, hold or throw the ball.\n\nA player cannot block or attack a serve from on or inside the 10-foot line.\n\nAfter the serve, front-line players may switch positions at the net.\n\nMatches are made up of sets; the number depends on the level of play.</string>
    <string name="rules_title">Volleyball rules</string>
    <string name="rules_violation_title">Volleyball rule violations</string>
    <string name="rules_volleyball_2">Stepping on or across the service line when serving while making contact with the ball.\n\nFailure to serve the ball over the net successfully.\n\nBall-handling errors and contacting the ball illegally (double touching, lifting, carrying, throwing, etc.)\\n\\nTouching the net with any part of the body while the ball is in play.\n\nBlocking a ball coming from the opponent’s court and contacting the ball when reaching over the net if your opponent has not used 3 contacts AND has a player there to make a play on the ball.\n\nAttacking a ball coming from the opponent’s court and contacting the ball when reaching over the net when the ball has not yet broken the vertical plane of the net.\n\nCrossing the court centerline with any part of your body, with the exception of a hand or foot. It is only considered a violation if the entire hand or entire foot crosses the court centerline.\n\nServing out of rotation or out of order.\n\nBack row player blocking (deflecting a ball coming from the opponent) when, at the moment of contact, the back row player is near the net and has part of their body above the top of the net. This is an illegal block.\n\nBack row player attacking a ball inside the front zone (the area inside the 3M/10-foot line) when, at the moment of contact, the ball is completely above the net. This is an illegal attack.</string>

    <!-- Volleyball FAQ -->

    <string name="faq_volleyball_scoring_title">How Do You Score In Volleyball?</string>
    <string name="faq_volleyball_scoring_body">
        The overall objective of volleyball is for each athlete to use skill involving teams passing a ball over the net without the ball touching the ground or going out of bounds. A ball dropping on the line counts as in bounds.
        \n\n
        There are a lot of different plays that are used in order to return the ball over the net, including: a pass, set or a hit, which can be very exciting in playing the sport but also in watching teams play as well.
        \n\n
        Teams earn points when their opponent errors, or fails to legally return the ball over the net. The team earning the most points in a volleyball game wins. Each game or another team that can be used is a set, a set is played to 25 points and there are usually 3-5 sets within each match depending on the level, where different rules are applied.
    </string>

    <string name="faq_what_to_wear_title">What Do You Wear To Play Volleyball?</string>
    <string name="faq_what_to_wear_body">
        Figuring out what to wear depends on whether you are playing indoor or outdoor, and competitively or for fun.
        \n\n
        Indoor volleyball practice calls for a t-shirt, athletic shorts, socks, court shoes, and knee pads. Your formal game gear will include a jersey, shorts, socks, shoes, and knee pads.
        \n\n
        Beach volleyball players wear swimsuits, sports bikinis, spandex tops and bottoms, full body suits, or shorts and tank-tops, depending on what their league allows it or not.
    </string>

    <string name="faq_libero_title">What Is A Libero?</string>
    <string name="faq_libero_body">
        The word \‘Libero\' is an Italian word meaning "free". As in football, soccer, and other sports, indoor volleyball uses defensive specialists called liberos.
        \n\n
        Two liberos may be chosen from a team of twelve or more players, but only one "acting libero" can be on the court at a time. Not every team has to have a libero, though. According to FIVB rules, teams have the option to designate up to two liberos for a tournament from among the list of players.
    </string>

    <string name="faq_libero_color_title">Which Player In Volleyball Wears A Different Color?</string>
    <string name="faq_libero_color_body">
        Volleyball liberos wear different colored jerseys to have them stand out from their teammates.
    </string>

    <string name="faq_libero_diff_title">How Is A Libero Different Than Other Volleyball Players?</string>
    <string name="faq_libero_diff_body">
        Liberos follow a little different set of rules. The libero was added to the indoor volleyball game in 1999 to liven up the game. The main differences between the libero and a defense specialist involve duties and substitution.
        \n\n
        The Libero can only rotate in for back-row players, wears a different color of jersey, can only serve for one player, cannot jump or attack, must sit out one play before returning to the game and when used as a substitute it doesn’t count against the team’s six substitutions per set that are allowed.
        \n\n
        A defensive specialist, on the other hand, can rotate in for any player, they are allowed to jump and attack a hit and when they are used as a substitute it does count against the team’s six allowed substitutions per set.
    </string>

    <string name="faq_volleyball_positions_title">What Are the Different Positions in Volleyball?</string>
    <string name="faq_volleyball_positions_body">
        Volleyball has several key positions, each with its own responsibilities. The main positions include:
        \n\n
        1. Setter: Sets the ball for attackers.
        \n\n
        2. Outside Hitter: Attacks from the left side of the court.
        \n\n
        3. Middle Blocker: Blocks at the net and attacks from the center.
        \n\n
        4. Opposite Hitter: Attacks from the right side.
        \n\n
        5. Libero: Specializes in defensive skills and wears a different-colored jersey.
    </string>
    <string name="faq_title">Common questions about Volleyball</string>
    <string name="options_changePwd">Allow notifications</string>
    <string name="permission_already_granted">Permission already granted</string>
    <string name="search_dialog_title">Search teams by year</string>
    <string name="search_dialog_btn">Search</string>

    <string name="api_call_failed">Error getting the data :(</string>

</resources>