<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RulesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                style="@style/highlight_title"
                android:gravity="center"
                android:text="@string/rules_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/rules_volleyball_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                style="@style/highlight_title"
                android:gravity="center"
                android:text="@string/rules_violation_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/rules_volleyball_2" />



        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>