<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".fragments.AboutFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        style="@style/highlight_title"
        android:text="@string/about_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:justificationMode="inter_word"
                android:textSize="25sp"
                android:layout_height="wrap_content"
                android:text="@string/about_info_1"
                />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:src="@drawable/vnl_logo" />

            <TextView
                android:layout_width="match_parent"
                android:justificationMode="inter_word"
                android:textSize="25sp"
                android:layout_height="wrap_content"
                android:text="@string/about_info_2" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_go_back" />

</androidx.appcompat.widget.LinearLayoutCompat>